--- a/app/templates/addGoalPage.html
+++ b/app/templates/addGoalPage.html
@@ -1,10 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Goal page</title>
-</head>
-<body>
-goal
-</body>
-</html>
+<!--TODO:
+add goal through form
+save goal to database (?)
+once a goal is added, display it on the home page
+delete goal
+edit goal-->
+
+{% extends "base.html" %}
+{% block content%}
+<form method="POST">
+    <br>
+    <h3>Add Goal</h3>
+    <br>
+    <div class="input-group mb-3">
+        <label for="goalName" class="col-sm-2 control-label">Goal Name</label>
+        <!-- Client-side validation -->
+        <input
+                type="text" required
+                class="form-control"
+                id="goalName"
+                name="goalName"
+                maxlength="50" required
+                placeholder="Enter goal name e.g. New Car (max 50 characters)"
+                aria-label="Enter goal name"
+        />
+
+    </div>
+    <div class="input-group mb-3">
+        <label for="goalAmount" class="col-sm-2 control-label">Goal Amount </label>
+        <br>
+        <span class="input-group-text">£</span>
+        <!-- Client-side validation -->
+        <input type="number" required
+               step="0.01"
+               min="0.01"
+               max="999999.99" required
+               id="goalAmount"
+               name="goalAmount"
+               class="form-control"
+               placeholder="Upto 2 decimal places e.g. 78.30 (max 999999.99)"
+               aria-label="Amount in pounds (2 decimal places)"
+        />
+    </div>
+    <br/>
+    <button type="submit" id="my_submit" class="btn btn-dark">Submit</button>
+</form>
+{% endblock %}
+
