--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,16 +52,14 @@
         </div>
     </div>
 </nav>
-<ul id="menu">
+<!--<ul id="menu">
     <li><a>Page 1</a></li>
     <li><a>Page 2</a></li>
     <li><a>Page 3</a></li>
     <li><a>Page 4</a></li>
-</ul>
+</ul>-->
 
-<div>
-    {% block content %}{% endblock %}
-</div>
+<div class="container">{% block content %} {% endblock %}</div>
 <!-- Import Bootstrap JS -->
 <script
         src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -80,8 +78,8 @@
 ></script>
 
 <!-- import the main.js file -->
-<script type="text/javascript">
-    src = "{{url_for('static', filename='js/main.js')}}"
+<script defer type="text/javascript">
+    src = "{{url_for('static', filename='static/main.js')}}"
 </script>
 
 </body>
