--- a/webapp/templates/addGoalPage.html
+++ b/webapp/templates/addGoalPage.html
@@ -9,13 +9,13 @@ edit goal-->
 {% block content%}
 <form method="POST">
     <br>
-    <h3>Add Goal</h3>
+    <h1>Add Goal</h1>
     <br>
     <div class="input-group mb-3">
         <label for="goalName" class="col-sm-2 control-label">Goal Name</label>
         <!-- Client-side validation -->
         <input
-                type="text" required
+                type="text"
                 class="form-control"
                 id="goalName"
                 name="goalName"
@@ -30,7 +30,7 @@ edit goal-->
         <br>
         <span class="input-group-text">£</span>
         <!-- Client-side validation -->
-        <input type="number" required
+        <input type="number"
                step="0.01"
                min="0.01"
                max="999999.99" required
