--- a/webapp/templates/allIncomesPage.html
+++ b/webapp/templates/allIncomesPage.html
@@ -1,3 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
+<h1>All Incomes</h1>
+    <ul>
+        {% for income in incomes %}
+            <li>{{ income.title }} - £{{ income.amount }} </li>
+        {% endfor %}
+    </ul>
+    <p> Total: £{{ total }}</p>
 {% endblock %}
