--- a/webapp/templates/addGoalPage.html
+++ b/webapp/templates/addGoalPage.html
@@ -1,48 +1,119 @@
 <!--TODO:
-add goal through form
-save goal to database (?)
 once a goal is added, display it on the home page
-delete goal
+delete goal button on homepage
 edit goal-->
 
 {% extends "base.html" %}
-{% block content%}
-<form method="POST">
-    <br>
-    <h1>Add Goal</h1>
-    <br>
-    <div class="input-group mb-3">
-        <label for="goalName" class="col-sm-2 control-label">Goal Name</label>
-        <!-- Client-side validation -->
-        <input
-                type="text"
-                class="form-control"
-                id="goalName"
-                name="goalName"
-                maxlength="50" required
-                placeholder="Enter goal name e.g. New Car (max 50 characters)"
-                aria-label="Enter goal name"
-        />
+{% block content %}
+    {% if title=="Add Goal" %}
+        <form method="POST">
+            <br>
+            <h1>Add Goal</h1>
+            <br>
+            <div class="input-group mb-3">
+                <label for="goalName" class="col-sm-2 control-label">Goal Name (optional)</label>
+                <!-- Client-side validation -->
+                <input
+                        type="text"
+                        class="form-control"
+                        id="goalName"
+                        name="goalName"
+                        maxlength="50"
+                        placeholder="Enter goal name e.g. New Car (max 50 characters)"
+                        aria-label="Enter goal name"
+                />
 
+            </div>
+            <div class="input-group mb-3">
+                <label for="goalAmount" class="col-sm-2 control-label">Goal Amount </label>
+                <br>
+                <span class="input-group-text">£</span>
+                <!-- Client-side validation -->
+                <input type="number"
+                       step="0.01"
+                       min="0.01"
+                       max="999999.99" required
+                       id="goalAmount"
+                       name="goalAmount"
+                       class="form-control"
+                       placeholder="Upto 2 decimal places e.g. 78.30 (max 999999.99)"
+                       aria-label="Amount in pounds (2 decimal places)"
+                />
+            </div>
+            <br/>
+            <button type="submit" id="my_submit" class="btn btn-dark">Submit</button>
+        </form>
+    {% endif %}
+    {% if title=="Edit Goal" %}
+<div class="modal" id="updateModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Confirm Update</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to update your goal?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-dark" onclick="form_submit()">Confirm</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+      </div>
     </div>
-    <div class="input-group mb-3">
-        <label for="goalAmount" class="col-sm-2 control-label">Goal Amount </label>
+  </div>
+</div>
+        <form id="editedform" method="POST">
         <br>
-        <span class="input-group-text">£</span>
-        <!-- Client-side validation -->
-        <input type="number"
-               step="0.01"
-               min="0.01"
-               max="999999.99" required
-               id="goalAmount"
-               name="goalAmount"
-               class="form-control"
-               placeholder="Upto 2 decimal places e.g. 78.30 (max 999999.99)"
-               aria-label="Amount in pounds (2 decimal places)"
-        />
-    </div>
-    <br/>
-    <button type="submit" id="my_submit" class="btn btn-dark">Submit</button>
-</form>
+        <h1>Edit Goal</h1>
+        <br>
+        <div class="input-group mb-3">
+            <label for="goalName" class="col-sm-2 control-label">Goal Name (optional)</label>
+            <!-- Client-side validation -->
+            <input
+                    type="text"
+                    class="form-control"
+                    id="goalName"
+                    name="goalName"
+                    maxlength="50"
+                    placeholder="Enter goal name e.g. New Car (max 50 characters)"
+                    aria-label="Enter goal name"
+            />
+
+        </div>
+        <div class="input-group mb-3">
+            <label for="goalAmount" class="col-sm-2 control-label">Goal Amount </label>
+            <br>
+            <span class="input-group-text">£</span>
+            <!-- Client-side validation -->
+            <input type="number"
+                   step="0.01"
+                   min="0.01"
+                   max="999999.99" required
+                   id="goalAmount"
+                   name="goalAmount"
+                   class="form-control"
+                   placeholder="Upto 2 decimal places e.g. 78.30 (max 999999.99)"
+                   aria-label="Amount in pounds (2 decimal places)"
+            />
+        </div>
+        <br/>
+        <input type="button" id="my_submit" value="Submit" onclick="conf_edit()" class="btn btn-dark">
+        </form>
+        <script>
+        function form_submit(){
+    // Close the Modal
+    $("#updateModal").modal("hide");
+
+    // submit it
+    document.getElementById("editedform").submit();
+}
+ function conf_edit() {
+     // show the Modal
+     $("#updateModal").modal("show");
+ }
+        </script>
+    {% endif %}
 {% endblock %}
 
