--- a/webapp/templates/allExpensesPage.html
+++ b/webapp/templates/allExpensesPage.html
@@ -1,3 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
+    <h1>All Expenses</h1>
+    <ul>
+        {% for expense in expenses %}
+            <li>{{ expense.title }} - £{{ expense.amount }} </li>
+        {% endfor %}
+    </ul>
+    <p> Total: £{{ total }}</p>
 {% endblock %}
