--- a/webapp/templates/allExpensesPage.html
+++ b/webapp/templates/allExpensesPage.html
@@ -1,11 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>All Expenses</h1>
-    <ul>
-        {% for expense in expenses %}
-            <li>{{ expense.title }} - £{{ expense.amount }} </li>
-        {% endfor %}
-    </ul>
     <p> Total: £{{ total }}</p>
     <div class="table-responsive">
         <table class=" table table-striped table-hover table-bordered border-dark table-align-middle">
@@ -13,8 +8,8 @@
             <TR>
                 <TH scope="col" width="300px" class="c1">Title</TH>
                 <TH scope="col" width="300px" class="c2">Amount</TH>
-                <TH scope="col" width="150px" class="c3"></TH>
-                <TH scope="col" width="150px" class="c4"></TH>
+                <TH scope="col" width="150px" class="c3">EDIT</TH>
+                <TH scope="col" width="150px" class="c4">DELETE</TH>
             </TR>
             </thead>
             {% for expense in expenses %}
@@ -22,11 +17,25 @@
                     <TD class="c1">{{ expense.title }}</TD>
                     <TD class="c2">£{{ expense.amount }}</TD>
                     <TD>
-                        <button class="badge">EDIT</button>
+                        <form action="/expenseEdit/" method="POST">
+                            <input type="hidden" id="expenseTitle" name="expenseTitle" value="{{expense.title}}">
+                            <input type="number"
+                   step="0.01"
+                   min="0.01"
+                   max="999999.99" required
+                   id="expenseAmount"
+                   name="expenseAmount"
+                   class="form-control"
+                   placeholder="Upto 2 d.p. e.g. 78.30"
+                   aria-label="Amount in pounds (2 decimal places)"
+                                   value="{{expense.amount}}"
+                            />
+                            <button type="submit" class="badge">EDIT</button>
+                            </form>
                     </TD>
                     <TD>
                         <form action="/expenseDelete/" method="POST">
-                            <input type="hidden" id="expenseTitle" name="expenseTitle" value="{{expense.title}}">
+                            <input type="hidden" id="expenseToDel" name="expenseToDel" value="{{expense.title}}">
                             <button type="submit" class="badge">DELETE</button>
                         </form>
                     </TD>
