--- a/webapp/templates/homePage.html
+++ b/webapp/templates/homePage.html
@@ -10,7 +10,8 @@ view balance -->
     <br>
     <div style="width: 100%; display: flex; gap: 20px; flex-direction: column; justify-content: center; align-items: center">
 
-        <h1>Homepage</h1>
+        <h1>Your Savings</h1>
+    <h2>Your Balance: £{{ balance }}</h2>
         {% if my_goal is not none %}
             {% if (my_goal.name is not none) %}
                 <h2>{{ my_goal.name }}</h2>
@@ -24,12 +25,12 @@ view balance -->
         </div>
         <p>You're {{ mywidth }}% of the way there!</p>
             <form name="deleteGoalButton" id="deleteGoalButton" method="post">
-            <button type="submit" class="badge badge-dark">Delete Goal</button>
+            <button type="submit" class="btn btn-dark">Delete Goal</button>
         </form>
 
         {% else %}
             <!-- add a button to add a goal -->
-            <a class="badge badge-dark" href="/addGoalPage">Add a goal</a>
+            <a class="btn btn-dark" href="/addGoalPage">Add a goal</a>
         {% endif %}
 
 
