--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!--      Import Favicon from Bootstrap Icons-->
-    <link rel="shortcut icon" type="image/svg" href="https://icons.getbootstrap.com/assets/icons/piggy-bank-fill.svg">
+    <link rel="shortcut icon" type="image/svg" href="https://icons.getbootstrap.com/assets/icons/book-half.svg">
     <!--      Import Bootstrap-->
     <link
             rel="stylesheet"
@@ -12,8 +12,19 @@
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
             crossorigin="anonymous"
     />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <!--      Import my own CSS-->
+    <link
+            rel="stylesheet"
+            type="text/css"
+            href="{{ url_for('static', filename='style.css') }}"
+    />
 
+    <!--      Import Font Awesome-->
     <link
             rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -30,28 +41,36 @@
         <title> No title specified</title>
     {% endif %}
 </head>
+
 <body>
-<nav class="nav-tabs navbar navbar-expand-lg navbar-light bg-dark">
-    <button
-            class="navbar-toggler navbar-dark text-white"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbar"
-    >
-        <span class="navbar-toggler-icon"></span>
-        Navigation bar
-    </button>
+<nav class="nav-tabs navbar navbar-expand-lg navbar-light bg-custom">
+        <button
+                class="navbar-toggler navbar-light text-black"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbar"
+        >
+            <span class="navbar-toggler-icon"></span>
+            Navigation
+        </button>
     <div class="collapse navbar-collapse" id="navbar">
-        <div class="navbar-nav">
-            <a class="nav-item nav-link text-white" id="home" href="/">Home</a>
-            <a class="nav-item nav-link text-white" id="addincome" href="/addIncomePage">Add Income</a>
-            <a class="nav-item nav-link text-white" id="addexpense" href="/addExpensePage">Add Expense</a>
-            <a class="nav-item nav-link text-white" id="allincomes" href="/allIncomesPage">All Incomes</a>
-            <a class="nav-item nav-link text-white" id="allexpenses" href="/allExpensesPage">All Expenses</a>
-            <a class="nav-item nav-link text-white" id="addgoal" href="/addGoalPage">Add Goal</a>
+            <div class="navbar-nav">
+                <a class="nav-logo nav-link text-black" id="home" href="/"><span class="nav-logo"> Bookable</span></a>
+                <a class="nav-item nav-link text-black" id="viewcart" href="/viewCartPage">View Cart</a>
+                <a class="nav-item nav-link text-black" id="wishlist" href="/wishlistPage">Wishlist</a>
+                <a class="nav-item nav-link text-black" id="checkout" href="/checkoutPage">Checkout</a>
+            </div>
+            <div class="navbar-nav ml-auto">
+                {% if current_user.is_authenticated %}
+                    <p class="nav-item text-black font-weight-bold align-self-center"><span class="welcome-style">Welcome, {{ current_user.username }}!</span></p>
+                    <a class="nav-item nav-link text-black" id="logoutpage" href="/logoutPage">Logout</a>
+                {% else %}
+                    <a class="nav-item nav-link text-black" id="userlogin" href="/userLoginPage">Login</a>
+                    <a class="nav-item nav-link text-black" id="usersignup" href="/userSignupPage">Sign Up</a>
+                {% endif %}
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 <!-- Flashing Messages -->
 {% with messages = get_flashed_messages(with_categories=true) %} {% if
     messages %} {% for category, message in messages %} {% if category ==
@@ -76,7 +95,6 @@
     <li><a>Page 3</a></li>
     <li><a>Page 4</a></li>
 </ul>-->
-
 <div class="container">{% block content %} {% endblock %}</div>
 <!-- Import Bootstrap JS -->
 <script
@@ -96,9 +114,6 @@
 ></script>
 
 <!-- import the main.js file -->
-<script defer type="text/javascript">
-    src = "{{url_for('static', filename='static/main.js')}}"
-</script>
-
+<script src="{{ url_for('static', filename='main.js') }}"></script>
 </body>
 </html>
