--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lexend&display=swap" rel="stylesheet">
     <!--      Import my own CSS-->
     <link
             rel="stylesheet"
@@ -56,7 +56,7 @@
     <div class="collapse navbar-collapse" id="navbar">
             <div class="navbar-nav">
                 <a class="nav-logo nav-link text-black" id="home" href="/"><span class="nav-logo"> Bookable</span></a>
-                <a class="nav-item nav-link text-black" id="viewcart" href="/viewCartPage">View Cart</a>
+                <a class="nav-item nav-link text-black" id="viewcart" href="/viewCartPage"><i class="bi bi-cart2"></i> View Cart</a>
                 <a class="nav-item nav-link text-black" id="wishlist" href="/wishlistPage">Wishlist</a>
                 <a class="nav-item nav-link text-black" id="checkout" href="/checkoutPage">Checkout</a>
             </div>
