--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,11 +12,11 @@
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
             crossorigin="anonymous"
     />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lexend&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lexend&display=swap" rel="stylesheet">
     <!--      Import my own CSS-->
     <link
             rel="stylesheet"
@@ -44,33 +44,35 @@
 
 <body>
 <nav class="nav-tabs navbar navbar-expand-lg navbar-light bg-custom">
-        <button
-                class="navbar-toggler navbar-light text-black"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbar"
-        >
-            <span class="navbar-toggler-icon"></span>
-            Navigation
-        </button>
+    <button
+            class="navbar-toggler navbar-light text-black"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbar"
+    >
+        <span class="navbar-toggler-icon"></span>
+        Navigation
+    </button>
     <div class="collapse navbar-collapse" id="navbar">
-            <div class="navbar-nav">
-                <a class="nav-logo nav-link text-black" id="home" href="/"><span class="nav-logo"> Bookable</span></a>
-                <a class="nav-item nav-link text-black" id="viewcart" href="/viewCartPage"><i class="bi bi-cart2"></i> View Cart</a>
-                <a class="nav-item nav-link text-black" id="wishlist" href="/wishlistPage">Wishlist</a>
-                <a class="nav-item nav-link text-black" id="checkout" href="/checkoutPage">Checkout</a>
-            </div>
-            <div class="navbar-nav ml-auto">
-                {% if current_user.is_authenticated %}
-                    <p class="nav-item text-black font-weight-bold align-self-center"><span class="welcome-style">Welcome, {{ current_user.username }}!</span></p>
-                    <a class="nav-item nav-link text-black" id="logoutpage" href="/logoutPage">Logout</a>
-                {% else %}
-                    <a class="nav-item nav-link text-black" id="userlogin" href="/userLoginPage">Login</a>
-                    <a class="nav-item nav-link text-black" id="usersignup" href="/userSignupPage">Sign Up</a>
-                {% endif %}
-            </div>
+        <div class="navbar-nav">
+            <a class="nav-logo nav-link text-black" id="home" href="/"><span class="nav-logo"> Bookable</span></a>
+            <a class="nav-item nav-link text-black" id="viewcart" href="/viewCartPage"><i class="bi bi-cart2"></i> View
+                Cart</a>
+            <a class="nav-item nav-link text-black" id="wishlist" href="/wishlistPage">Wishlist</a>
+            <a class="nav-item nav-link text-black" id="checkout" href="/checkoutPage">Checkout</a>
         </div>
-    </nav>
+        <div class="navbar-nav ml-auto">
+            {% if current_user.is_authenticated %}
+                <p class="nav-item text-black font-weight-bold align-self-center"><span
+                        class="welcome-style">Welcome, {{ current_user.username }}!</span></p>
+                <a class="nav-item nav-link text-black" id="logoutpage" href="/logoutPage">Logout</a>
+            {% else %}
+                <a class="nav-item nav-link text-black" id="userlogin" href="/userLoginPage">Login</a>
+                <a class="nav-item nav-link text-black" id="usersignup" href="/userSignupPage">Sign Up</a>
+            {% endif %}
+        </div>
+    </div>
+</nav>
 <!-- Flashing Messages -->
 {% with messages = get_flashed_messages(with_categories=true) %} {% if
     messages %} {% for category, message in messages %} {% if category ==
