--- a/app/templates/viewCartPage.html
+++ b/app/templates/viewCartPage.html
@@ -14,9 +14,10 @@
                             <p class="quantity">Quantity: {{ item.quantity }}</p>
                             <p class="stock">Stock: {{ item.book.stock }}</p>
                         </div>
-                        <form action="{{ url_for('remove_from_cart') }}" method="POST" >
+                        <form action="{{ url_for('remove_from_cart') }}" method="POST">
                             <input type="hidden" name="book_isbn" value="{{ item.book.ISBN }}">
-                            <input type="number" name="quantity" min="1" value="1" aria-label="remove quantity from cart">
+                            <input type="number" name="quantity" min="1" value="1"
+                                   aria-label="remove quantity from cart">
                             <button type="submit" class="btn btn-primary">Remove</button>
                         </form>
                     </div>
